# cppvscode_sample

./: .gitignore  CMakeLists.txt  build32.bat  buildWASM.bat  emcc build.bat  hello.lua  imgui.ini  test.cpp  test.html  test.js  test.wasm
src/client/scenes/: TopScene.cpp  TopScene.h
src/client/widgets/: GridWidget.h  ScriptWidget.cpp  ScriptWidget.h
src/core/: CMakeLists.txt  DefaultScene.cpp  DefaultScene.h  SceneManager.cpp  SceneManager.h  VAnimation.cpp  VAnimation.h  VAtlas.cpp  VAtlas.h  VDataHolder.cpp  VDataHolder.h  VDataManager.cpp  VDataManager.h  VGame.cpp  VGame.h  VObjectHolder.cpp  VObjectHolder.h  VPersistentData.cpp  VPersistentData.h  VPoint.h  VScene.cpp  VScene.h  VTimer.cpp  VTimer.h
